tests/baselines/reference/moduleResolutionWithoutExtension7.errors.txt
/src/bar.cts(2,22): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== /src/bar.cts (1 errors) ====
    // Extensionless relative path cjs import in a cjs module
    import foo = require("./foo"); // should error, should not ask for extension
                         ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.